refactor: добавлена возможность поиска фильма одновлеменно по названию и режиссеру, и режиссеру отдельно