@@ -6,8 +6,10 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.annotation.DirtiesContext;
+import ru.yandex.practicum.filmorate.controller.DirectorController;
 import ru.yandex.practicum.filmorate.controller.FilmController;
 import ru.yandex.practicum.filmorate.controller.UserController;
+import ru.yandex.practicum.filmorate.model.Director;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.model.Mpa;
 import ru.yandex.practicum.filmorate.model.User;
@@ -27,6 +29,9 @@ class FilmControllerTests {
     private FilmController filmController;
     @Autowired
     private UserController userController;
+
+    @Autowired
+    private DirectorController directorController;
     final private Film film = Film.builder()
             .name("name")
             .description("new Film")
@@ -88,34 +93,65 @@ class FilmControllerTests {
     }
 
     @Test
-    void searchFilmByTitleTest() {
-        Film filmTest2 = Film.builder()
-                .name("film")
-                .description("new Film")
-                .duration(130)
-                .releaseDate(LocalDate.of(2002, 5, 20))
-                .mpa(Mpa.builder().id(1L).name("G").build())
-                .build();
-        filmTest2.setUsersIdsOfLikes(new HashSet<>(Arrays.asList(1L, 2L)));
-        Film filmTest3 = Film.builder()
+    void searchFilmTest() {
+        createFilmsAndUserForTest();
+        List<Film> findFilms = filmController.searchFilm("i", List.of("title"));
+        assertEquals(2, findFilms.size());
+        assertEquals("film", findFilms.get(0).getName());
+        findFilms = filmController.searchFilm("name", List.of("title"));
+        assertEquals(1, findFilms.size());
+        assertEquals(film.getName(), findFilms.get(0).getName());
+        assertNull(filmController.searchFilm("i", List.of("zero")));
+        findFilms = filmController.searchFilm("Test", List.of("director"));
+        assertEquals(1, findFilms.size());
+        assertEquals("title", findFilms.get(0).getName());
+        findFilms = filmController.searchFilm("T", List.of("director"));
+        assertEquals(2, findFilms.size());
+        assertEquals("film", findFilms.get(0).getName());
+        findFilms = filmController.searchFilm("name", List.of("title", "director"));
+        assertEquals(1, findFilms.size());
+        assertEquals(film.getName(), findFilms.get(0).getName());
+        findFilms = filmController.searchFilm("test", List.of("title", "director"));
+        assertEquals(1, findFilms.size());
+    }
+
+    private void createFilmsAndUserForTest() {
+        filmController.create(film);
+        Set<Director> directors = new HashSet<>();
+        Set<Director> directors1 = new HashSet<>();
+        createDirectorForTest();
+        final Film film1 = Film.builder()
                 .name("title")
                 .description("new Film")
                 .duration(130)
                 .releaseDate(LocalDate.of(2002, 5, 20))
                 .mpa(Mpa.builder().id(1L).name("G").build())
                 .build();
-        filmTest2.setUsersIdsOfLikes(new HashSet<>(Arrays.asList(1L, 2L, 3L)));
-        filmController.create(film);
-        filmController.create(filmTest2);
-        filmController.create(filmTest3);
-        List<String> title = List.of("title");
-        List<Film> findFilms = filmController.searchFilm("i", title);
-        assertEquals(2, findFilms.size());
-        assertEquals(filmTest3.getName(), findFilms.get(1).getName());
-        findFilms = filmController.searchFilm("name", title);
-        assertEquals(1, findFilms.size());
-        assertEquals(film.getName(), findFilms.get(0).getName());
-        title = List.of("zero");
-        assertNull(filmController.searchFilm("i", title));
+        directors.add(directorController.getDirector(1L));
+        film1.setDirectors(directors);
+        filmController.create(film1);
+        final Film film2 = Film.builder()
+                .name("film")
+                .description("new Film")
+                .duration(130)
+                .releaseDate(LocalDate.of(2002, 5, 20))
+                .mpa(Mpa.builder().id(1L).name("G").build())
+                .build();
+        directors1.add(directorController.getDirector(2L));
+        film2.setDirectors(directors1);
+        filmController.create(film2);
+        userController.create(user);
+        filmController.addLikeToFilm(film2.getId(), user.getId());
+    }
+
+    public void createDirectorForTest() {
+        final Director director = Director.builder()
+                .name("Test")
+                .build();
+        directorController.create(director);
+        final Director director1 = Director.builder()
+                .name("T")
+                .build();
+        directorController.create(director1);
     }
 }
